# delivery-api

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3ea07037adb4_adicionar_itens_no_pedido.py  50a003c60d81_initial_migration.py
app/: main.py
app/api/routes/: auth_routes.py  order_routes.py  root_routes.py
app/core/: config.py  deps.py  exceptions.py  middlewares.py  security.py
app/db/: session.py
app/models/: order.py  user.py
app/schemas/: auth.py  order.py  user.py
app/services/: auth_service.py  order_service.py
app/static/css/: style.css
app/templates/: index.html
docs/: index.html
docs/css/: style.css
teampleates/: index.html
tests/: conftest.py
tests/test_auth/: test_auth_routes.py  test_auth_service.py
tests/test_orders/: test_order_routes.py  test_order_service.py
