[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deliveryfastapi"
version = "0.1.0"
description = "Backend de sistema de delivery com FastAPI"
authors = [
    { name = "Pablo", email = "pablohenriques0603@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["app"]
